k8s_manifests/server/vmselect/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vmselect
  name: vmselect
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: vmselect
  replicas: 2
  template:
    metadata:
      labels:
        app: vmselect
    spec:
      automountServiceAccountToken: true
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - vmselect
                topologyKey: topology.kubernetes.io/zone
              weight: 100
      containers:
        - name: vmselect
          image: "victoriametrics/vmselect:v1.95.1-cluster"
          imagePullPolicy: "IfNotPresent"
          securityContext: {}
          args:
            - "--cacheDataPath=/vmselect/cache"
            - --storageNode=vmstorage-0.vmstorage.monitoring.svc.cluster.local:8401
            - --storageNode=vmstorage-1.vmstorage.monitoring.svc.cluster.local:8401
            - --dedup.minScrapeInterval=10s
            - --replicationFactor=2
            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
          ports:
            - name: http
              containerPort: 8481
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /vmselect/cache
              name: cache-volume
          resources: {}
      serviceAccountName: vm
      volumes:
        - name: cache-volume
          emptyDir: {}
