k8s_manifests/server/vmselect/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vmselect
  name: vmselect
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 8481
      protocol: TCP
      targetPort: http
  selector:
    app: vmselect
  type: "ClusterIP"
