k8s_manifests/server/vmselect/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmselect
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: vmselect
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/security-groups: sample
spec:
  ingressClassName: alb
  rules:
    - host: metrics-querent.v16cp.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmselect
                port:
                  number: 8481
